--- a/plugins/WEATHER/manifest.json
+++ b/plugins/WEATHER/manifest.json
@@ -4,6 +4,9 @@
   "description": "Fetches current weather information for a specified location",
   "explanation": "This plugin uses the OpenWeatherMap API to retrieve current weather conditions, temperature, humidity, and other meteorological data for any city or location worldwide.",
   "inputGuidance": "Inputs for this plugin must include 'location'.",
+  "repository": {
+      "type": "github"
+  },
   "inputDefinitions": [
     {
       "name": "location",
