--- a/plugins/MARKDOWN_PARSER/manifest.json
+++ b/plugins/MARKDOWN_PARSER/manifest.json
@@ -9,16 +9,33 @@
       "name": "extract_section",
       "description": "Extracts a section from a Markdown document.",
       "inputs": [
-        {"name": "markdown", "type": "string", "required": true, "description": "The Markdown content to parse."},
-        {"name": "header", "type": "string", "required": true, "description": "The header of the section to extract."}
+        {
+          "name": "markdown",
+          "type": "string",
+          "required": true,
+          "description": "The Markdown content to parse."
+        },
+        {
+          "name": "header",
+          "type": "string",
+          "required": true,
+          "description": "The header of the section to extract."
+        }
       ]
     },
     {
       "name": "to_json",
       "description": "Converts a Markdown document to a JSON object.",
       "inputs": [
-        {"name": "markdown", "type": "string", "required": true, "description": "The Markdown content to convert."}
+        {
+          "name": "markdown",
+          "type": "string",
+          "required": true,
+          "description": "The Markdown content to convert."
+        }
       ]
     }
-  ]
+  ],
+  "id": "plugin-MARKDOWN_PARSER",
+  "verb": "MARKDOWN_PARSER"
 }
