--- a/plugins/RESTAURANT_RESERVATION_SYSTEM/manifest.json
+++ b/plugins/RESTAURANT_RESERVATION_SYSTEM/manifest.json
@@ -39,5 +39,11 @@
   "repository": {
     "type": "local"
   },
-  "tags": ["restaurant", "reservations", "booking", "availability"]
+  "tags": [
+    "restaurant",
+    "reservations",
+    "booking",
+    "availability"
+  ],
+  "version": "1.0.0"
 }
