--- a/plugins/CALENDAR/manifest.json
+++ b/plugins/CALENDAR/manifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "calendar",
+  "id": "plugin-CALENDAR",
   "name": "CALENDAR",
   "version": "1.0.0",
   "description": "CALENDAR plugin for cktMCS backend services",
@@ -44,5 +44,6 @@
     "logging": true,
     "in_memory_storage": true,
     "thread_safe": true
-  }
+  },
+  "verb": "CALENDAR"
 }
