--- a/plugins/DATABASE/manifest.json
+++ b/plugins/DATABASE/manifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "database",
+  "id": "plugin-DATABASE",
   "name": "DATABASE",
   "version": "1.0.0",
   "description": "DATABASE plugin for cktMCS backend services",
@@ -44,5 +44,6 @@
     "logging": true,
     "in_memory_storage": true,
     "thread_safe": true
-  }
+  },
+  "verb": "DATABASE"
 }
