--- a/plugins/FLOOR_MANAGEMENT/manifest.json
+++ b/plugins/FLOOR_MANAGEMENT/manifest.json
@@ -39,5 +39,11 @@
   "repository": {
     "type": "local"
   },
-  "tags": ["restaurant", "floor", "layout", "capacity-management"]
+  "tags": [
+    "restaurant",
+    "floor",
+    "layout",
+    "capacity-management"
+  ],
+  "version": "1.0.0"
 }
