--- a/plugins/KNOWLEDGE_BASE/manifest.json
+++ b/plugins/KNOWLEDGE_BASE/manifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "knowledge_base",
+  "id": "plugin-KNOWLEDGE_BASE",
   "name": "KNOWLEDGE_BASE",
   "version": "1.0.0",
   "description": "KNOWLEDGE_BASE plugin for cktMCS backend services",
@@ -44,5 +44,6 @@
     "logging": true,
     "in_memory_storage": true,
     "thread_safe": true
-  }
+  },
+  "verb": "KNOWLEDGE_BASE"
 }
