--- a/plugins/SERVICE_FLOW/manifest.json
+++ b/plugins/SERVICE_FLOW/manifest.json
@@ -39,5 +39,11 @@
   "repository": {
     "type": "local"
   },
-  "tags": ["restaurant", "service", "orders", "guest-satisfaction"]
+  "tags": [
+    "restaurant",
+    "service",
+    "orders",
+    "guest-satisfaction"
+  ],
+  "version": "1.0.0"
 }
