--- a/plugins/STAFF_SCHEDULER/manifest.json
+++ b/plugins/STAFF_SCHEDULER/manifest.json
@@ -39,5 +39,11 @@
   "repository": {
     "type": "local"
   },
-  "tags": ["restaurant", "scheduling", "staff", "labor-management"]
+  "tags": [
+    "restaurant",
+    "scheduling",
+    "staff",
+    "labor-management"
+  ],
+  "version": "1.0.0"
 }
