--- a/plugins/TABLE_MANAGEMENT/manifest.json
+++ b/plugins/TABLE_MANAGEMENT/manifest.json
@@ -39,5 +39,11 @@
   "repository": {
     "type": "local"
   },
-  "tags": ["restaurant", "tables", "seating", "floor-management"]
+  "tags": [
+    "restaurant",
+    "tables",
+    "seating",
+    "floor-management"
+  ],
+  "version": "1.0.0"
 }
