--- a/plugins/development_planner/manifest.json
+++ b/plugins/development_planner/manifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "development_planner",
+  "id": "plugin-DEVELOPMENT_PLANNER",
   "name": "Development Planner",
   "version": "1.0.0",
   "description": "Career and skill development planning and tracking",
@@ -77,5 +77,6 @@
         }
       }
     }
-  ]
+  ],
+  "verb": "DEVELOPMENT_PLANNER"
 }
